# DUAD

./: .gitignore  README.md  tasks.json
Modulo_2/proyecto_final/ecommerce_backend/: .env.example  Makefile  README.md  api.http  db-relations.md  fix_permissions.sh  pyproject.toml  pytest.ini  requirements.md  setup_database.sh
Modulo_2/proyecto_final/ecommerce_backend/app/: __init__.py  config.py  extensions.py
Modulo_2/proyecto_final/ecommerce_backend/app/api/: products.py  sales.py  user.py
Modulo_2/proyecto_final/ecommerce_backend/app/models/: __init__.py  cart.py  cart_product.py  delivery_address.py  invoice.py  product.py  sale.py  sale_product.py  user.py
Modulo_2/proyecto_final/ecommerce_backend/app/repos/: cart_repo.py  delivery_address_repo.py  invoice_repo.py  product_repo.py  sale_repo.py  user_repo.py
Modulo_2/proyecto_final/ecommerce_backend/app/schemas/: __init__.py  cart.py  cart_product.py  delivery_address.py  invoice.py  product.py  sale.py  sale_product.py  user.py
Modulo_2/proyecto_final/ecommerce_backend/app/security/: blocklist.py  decorators.py  jwt_blocklist_check.py  jwt_handlers.py  rbac.py
Modulo_2/proyecto_final/ecommerce_backend/app/services/: __init__.py  auth_service.py  cache_service.py  cart_service.py  delivery_address_service.py  (+4 more)
Modulo_2/proyecto_final/ecommerce_backend/ecommerce_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Modulo_2/proyecto_final/ecommerce_backend/tests/: conftest.py  test_auth_api.py  test_cache_functionality.py  test_products_api.py  test_sales_api.py  test_user_management_api.py
(+201 files in other folders)
