[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecommerce-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "Flask>=3.0.0",
  "Flask-SQLAlchemy>=3.1.0",
  "Flask-Migrate>=4.0.7",
  "psycopg2-binary>=2.9.9",
  "Flask-JWT-Extended>=4.6.0",
  "marshmallow>=3.21.0",
  "Flask-Caching>=2.3.0",
  "redis>=5.0.0",
  "python-dotenv>=1.0.1",
  "cryptography>=41.0.0"
]

[project.optional-dependencies]
test = [
  "pytest>=7.4.0",
  "pytest-flask>=1.3.0",
  "pytest-cov>=4.1.0",
  "pytest-mock>=3.11.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "keys*", "migrations*"]

[tool.setuptools]
include-package-data = true

[tool.pip]
# opcional, para 'pip install -e .': necesitarías [project.scripts] y setup cfg/py si quieres.
